--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<h3>New post</h3>
+
+<%= simple_form_for @post do |f| %>
+	<%= f.input :title %>
+	<%= f.input :body, :as => :text %>
+	
+	<%= f.submit 'Publish' %>
+<% end %>
