--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Clovrr</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+	<title>Evan Walsh: For your health</title>
+	<!--<link href="/stylesheets/screen.css" rel="stylesheet" media="screen, print" />
+	<link href="/stylesheets/handheld.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />-->	
+	<%= stylesheet_link_tag 'screen' %>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=320px, initial-scale=1.0, maximum-scale=1.0">
+	<link rel="shortcut icon" href="/favicon.ico">
+	<meta name="author" content="Evan Walsh">
+	<meta name="description" content="The blog of Christian web guy Evan Walsh. Read his thoughts of stuff or something.">
+	<%= csrf_meta_tag %>
 </head>
 <body>
-
-<%= yield %>
-
+	<div class="container" id="main">
+		
+		<%= flash_messages %>
+		
+		<header>
+			<h1>
+			    <a href="/">Evan Walsh</a>
+			</h1>
+			<h2>For your health</h2>
+		</header>
+		
+		<div id="content">
+			
+			<%= yield %>
+			
+		</div>
+		
+		<div id="projects" class="list">
+			<h3>Projects</h3>
+			<ul>
+				<li>
+					<span class="title grid2 first"><a href="http://nothingconcept.com">Nothing Concept</a></span>
+					<span class="description grid9">My old design studio</span>
+					<div class="clear"></div>
+				</li>
+				<li>
+					<span class="title grid2 first"><a href="http://archive.evanwalsh.net">Evan Walsh Archive</a></span>
+					<span class="description grid9">My former blog</span>
+					<div class="clear"></div>
+				</li>
+			</ul>
+		</div>
+		
+		<div id="contact" class="list">
+			<h3>Contact</h3>
+			<ul>
+				<li>
+					<span class="type grid2 first">Email</span>
+					<span class="data grid9">evan@nothingconcept.com</span>
+					<div class="clear"></div>
+				</li>
+				<li>
+					<span class="type grid2 first">Twitter</span>
+					<span class="data grid9"><a href="http://twitter.com/evanwalsh">@evanwalsh</a></span>
+					<div class="clear"></div>
+				</li>
+				<li>
+					<span class="type grid2 first">Github</span>
+					<span class="data grid9"><a href="http://github.com.com/evanwalsh">evanwalsh</a></span>
+					<div class="clear"></div>
+				</li>
+			</ul>
+		</div>
+		
+		<footer>
+			&copy; 2011 Evan Walsh. All Rights Reserved. Last updated {{ site.time | date_to_string }}. You should <a href="javascript:alert('Coming soon.')">subscribe via RSS.</a>
+		</footer>
+		
+	</div>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.js"></script>
+	<script>window.jQuery || document.write("<script src='/javascripts/jquery.js'>\x3C/script>")</script>
+	<script src="/javascripts/main.js" type="text/javascript"></script>
+	<script type="text/javascript" src="http://www.observerapp.com/record.js"></script>
+	<script type="text/javascript">try { Observerapp.record("4da73a5d1b40842e0a01375c"); } catch(e) {};</script>
 </body>
 </html>
