Added date stuff; Fixed bottom

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
 		</div>
 		
 		<footer>
-			&copy; 2011 Evan Walsh. All Rights Reserved. Last updated {{ site.time | date_to_string }}. You should <a href="javascript:alert('Coming soon.')">subscribe via RSS.</a>
+			&copy; 2011 Evan Walsh. All Rights Reserved. You should <a href="javascript:alert('Coming soon.')">subscribe via RSS.</a>
 		</footer>
 		
 	</div>
