--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1,134 +1,45 @@
 @import url(html5reset.css);
 @import url(978gs.css);
-/* line 5, ../../app/stylesheets/screen.sass */
-body {
-  background: white;
-  color: #333333;
-  font-size: 14px;
-}
+body { background: white; color: #333333; font-size: 14px; }
 
-/* line 10, ../../app/stylesheets/screen.sass */
-a {
-  text-decoration: none;
-}
-/* line 12, ../../app/stylesheets/screen.sass */
-a:link, a:visited {
-  color: #316288;
-}
-/* line 14, ../../app/stylesheets/screen.sass */
-a:active {
-  color: black;
-}
-/* line 16, ../../app/stylesheets/screen.sass */
-a:hover {
-  color: #458abf;
-}
+a { text-decoration: none; }
+a:link, a:visited { color: #316288; }
+a:active { color: black; }
+a:hover { color: #458abf; }
 
-/* line 19, ../../app/stylesheets/screen.sass */
-h3 {
-  margin-bottom: 16px;
-  font-size: 16px;
-}
+h3 { margin-bottom: 16px; font-size: 16px; }
 
-/* line 23, ../../app/stylesheets/screen.sass */
-h4 {
-  margin: 16px 0;
-  font-size: 14px;
-}
+h4 { margin: 16px 0; font-size: 14px; }
 
-/* line 27, ../../app/stylesheets/screen.sass */
-p {
-  margin-bottom: 16px;
-  line-height: 24px;
-}
+p { margin-bottom: 16px; line-height: 24px; }
 
-/* line 31, ../../app/stylesheets/screen.sass */
-#main {
-  margin-top: 64px;
-  margin-bottom: 64px;
-}
+#main { margin-top: 64px; margin-bottom: 64px; }
 
-/* line 36, ../../app/stylesheets/screen.sass */
-header {
-  margin-bottom: 64px;
-}
-/* line 38, ../../app/stylesheets/screen.sass */
-header h1, header h2 {
-  font-size: 18px;
-}
-/* line 40, ../../app/stylesheets/screen.sass */
-header h1 {
-  color: black;
-}
-/* line 42, ../../app/stylesheets/screen.sass */
-header h1 a:link, header h1 a:hover, header h1 a:visited, header h1 a:active {
-  color: black;
-  text-decoration: none;
-}
-/* line 45, ../../app/stylesheets/screen.sass */
-header h2 {
-  font-weight: normal;
-  color: #aaaaaa;
-}
+header { margin-bottom: 64px; }
+header h1, header h2 { font-size: 18px; }
+header h1 { color: black; }
+header h1 a:link, header h1 a:hover, header h1 a:visited, header h1 a:active { color: black; text-decoration: none; }
+header h2 { font-weight: normal; color: #aaaaaa; }
 
-/* line 49, ../../app/stylesheets/screen.sass */
-#content {
-  margin-bottom: 64px;
-}
+#content { margin-bottom: 64px; }
 
-/* line 52, ../../app/stylesheets/screen.sass */
-#post {
-  text-align: justify;
-}
+#post { text-align: justify; }
 
-/* line 56, ../../app/stylesheets/screen.sass */
-#related span {
-  display: block;
-}
+#related span { display: block; }
 
-/* line 59, ../../app/stylesheets/screen.sass */
-.list {
-  margin-bottom: 64px;
-}
-/* line 61, ../../app/stylesheets/screen.sass */
-.list ul {
-  list-style: none;
-  margin-left: 0;
-  padding: 0;
-}
-/* line 65, ../../app/stylesheets/screen.sass */
-.list ul li {
-  margin: 0 0 8px 0;
-  padding: 0;
-}
+.list { margin-bottom: 64px; }
+.list ul { list-style: none; margin-left: 0; padding: 0; }
+.list ul li { margin: 0 0 8px 0; padding: 0; }
 
-/* line 69, ../../app/stylesheets/screen.sass */
-footer {
-  color: #aaaaaa;
-  font-size: 12px;
-  margin-top: 64px;
-}
+footer { color: #aaaaaa; font-size: 12px; margin-top: 64px; }
 
-/* line 74, ../../app/stylesheets/screen.sass */
-input, textarea {
-  padding: 4px;
-}
+input, textarea { padding: 4px; }
 
-/* line 77, ../../app/stylesheets/screen.sass */
-label {
-  display: block;
-}
+label { display: block; }
 
-/* line 80, ../../app/stylesheets/screen.sass */
-.input {
-  margin-bottom: 8px;
-}
-/* line 82, ../../app/stylesheets/screen.sass */
-.input abbr {
-  display: none;
-}
+.input { margin-bottom: 8px; }
+.input abbr { display: none; }
 
-/* line 85, ../../app/stylesheets/screen.sass */
-input:invalid {
-  outline: none;
-}
+input:invalid { outline: none; }
+
+h4 { margin-top: -16px; }
