--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -87,3 +87,9 @@ input:invalid
   
 h4
   margin-top: -16px
+  
+#admin
+  background: #444
+  color: #f8f8f8
+  padding: 16px
+  border-bottom: #222 1px solid
