--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,18 @@
 	<%= csrf_meta_tag %>
 </head>
 <body>
+	<% if signed_in? %>
+	<div id="admin">
+		<nav>
+			<ul>
+		    <li><a id="posts" href="#">Posts</a></li>
+				<li><a id="users" href="#">Users</a></li>
+				<li><a id="preferences" href="#">Preferences</a></li>
+			</ul>
+		</nav>
+	</div>
+	<% end %>
+	
 	<div class="container" id="main">
 		
 		<%= flash_messages %>
@@ -31,43 +43,6 @@
 			
 		</div>
 		
-		<div id="projects" class="list">
-			<h3>Projects</h3>
-			<ul>
-				<li>
-					<span class="title grid2 first"><a href="http://nothingconcept.com">Nothing Concept</a></span>
-					<span class="description grid9">My old design studio</span>
-					<div class="clear"></div>
-				</li>
-				<li>
-					<span class="title grid2 first"><a href="http://archive.evanwalsh.net">Evan Walsh Archive</a></span>
-					<span class="description grid9">My former blog</span>
-					<div class="clear"></div>
-				</li>
-			</ul>
-		</div>
-		
-		<div id="contact" class="list">
-			<h3>Contact</h3>
-			<ul>
-				<li>
-					<span class="type grid2 first">Email</span>
-					<span class="data grid9">evan@nothingconcept.com</span>
-					<div class="clear"></div>
-				</li>
-				<li>
-					<span class="type grid2 first">Twitter</span>
-					<span class="data grid9"><a href="http://twitter.com/evanwalsh">@evanwalsh</a></span>
-					<div class="clear"></div>
-				</li>
-				<li>
-					<span class="type grid2 first">Github</span>
-					<span class="data grid9"><a href="http://github.com.com/evanwalsh">evanwalsh</a></span>
-					<div class="clear"></div>
-				</li>
-			</ul>
-		</div>
-		
 		<footer>
 			&copy; 2011 Evan Walsh. All Rights Reserved. You should <a href="javascript:alert('Coming soon.')">subscribe via RSS.</a>
 		</footer>
@@ -75,7 +50,7 @@
 	</div>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.js"></script>
 	<script>window.jQuery || document.write("<script src='/javascripts/jquery.js'>\x3C/script>")</script>
-	<script src="/javascripts/main.js" type="text/javascript"></script>
+	<%= javascript_include_tag 'application' %>
 	<script type="text/javascript" src="http://www.observerapp.com/record.js"></script>
 	<script type="text/javascript">try { Observerapp.record("4da73a5d1b40842e0a01375c"); } catch(e) {};</script>
 </body>
