--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -43,3 +43,5 @@ label { display: block; }
 input:invalid { outline: none; }
 
 h4 { margin-top: -16px; }
+
+#admin { background: #444444; color: #f8f8f8; padding: 16px; border-bottom: #222222 1px solid; }
