--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Evan Walsh: For your health</title>
-	<%= stylesheet_link_tag 'screen' %>
+	<title>Clovrr: <%= yield :title %></title>
+	<%= stylesheet_link_tag 'users' %>
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=320px, initial-scale=1.0, maximum-scale=1.0">
@@ -11,15 +11,12 @@
 </head>
 <body>
 	
-	<div class="container" id="main">
+	<div id="main">
 		
 		<%= flash_messages %>
 		
 		<header>
-			<h1>
-			    <a href="/">Evan Walsh</a>
-			</h1>
-			<h2>For your health</h2>
+			<h1><%= yield :title %></h1>
 		</header>
 		
 		<div id="content">
@@ -28,8 +25,9 @@
 			
 		</div>
 		
-		<footer>
-			&copy; 2011 Evan Walsh. All Rights Reserved. You should <a href="javascript:alert('Coming soon.')">subscribe via RSS.</a>
+		<footer class="clearfix">
+			<%= link_to raw('&larr; Go Back'), root_url %>
+			<span id="powered_by">Powered by <a href="http://clovrr.com">Clovrr</a></span>
 		</footer>
 		
 	</div>
