--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,13 @@
-<h3>New user</h3>
+<% title 'Sign up' %>
+
+<div id="wrong_place">
+	Already have an account? <%= link_to 'Go sign in', sign_in_url %>.
+</div>
 
 <%= simple_form_for @user do |f| %>
 	<%= f.input :username %>
 	<%= f.input :email %>
 	<%= f.input :password %>
 	
-	<%= f.submit 'Sign up' %>
+	<%= f.submit 'Sign up', class: 'commit' %>
 <% end %>
