MONTH AND YEAR ARCHIVES. BOOM.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Evan Walsh: For your health</title>
+	<title>Evan Walsh: <%= yield :title %></title>
 	<!--<link href="/stylesheets/screen.css" rel="stylesheet" media="screen, print" />
 	<link href="/stylesheets/handheld.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />-->	
 	<%= stylesheet_link_tag 'screen' %>
