--- a/app/views/posts/month_archive.html.erb
+++ b/app/views/posts/month_archive.html.erb
@@ -1,3 +1,3 @@
-<% title "#{monthname params[:month]} #{params[:year]} archive" %>
+<% title "#{@month_name} #{@year} archive" %>
 
 <%= render @posts %>
