User controller filtering

--- a/app/stylesheets/users.sass
+++ b/app/stylesheets/users.sass
@@ -55,6 +55,8 @@ input[type="submit"], button
     weight: bold
     size: 16px
   +border-radius(4px)
+  &:hover
+    background: lighten(#81C914, 2) -webkit-gradient(linear, 0% 0%, 0% 100%, from(lighten(#81C914, 2)), to(lighten(#5C8F0E, 2)))
   &:active
     background: #5C8F0E -webkit-gradient(linear, 0% 0%, 0% 100%, from(#5C8F0E), to(#81C914))
     color: lighten(#5C8F0E, 50)
