--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Admin::Posts#index</h1>
-<p>Find me in app/views/admin/posts/index.html.erb</p>
+<% title 'Posts' %>
+
+<table cellspacing="0" id="posts">
+	<tbody>
+		<%= render @posts %>
+	</tbody>
+</table>
