--- a/app/stylesheets/admin.sass
+++ b/app/stylesheets/admin.sass
@@ -35,7 +35,7 @@ label
   font:
     size: 16px
   
-input[type="text"], input[type="password"], input[type="email"]
+input[type="text"], input[type="password"], input[type="email"], textarea
   font-size: 24px
   padding: 8px
   width: 580px
@@ -61,6 +61,9 @@ input[type="submit"], button
     background: #5C8F0E -webkit-gradient(linear, 0% 0%, 0% 100%, from(#5C8F0E), to(#81C914))
     color: lighten(#5C8F0E, 50)
   
+textarea
+  font-size: 14px
+  height: 280px
   
 .input
   margin-bottom: 16px
