Admin section nearing completion

--- a/app/stylesheets/admin.sass
+++ b/app/stylesheets/admin.sass
@@ -88,3 +88,18 @@ td
   
 tr
   border-bottom: #ccc 1px solid
+  
+.ajax_form
+  input[type="text"]
+    font-size: 14px
+    padding: 2px
+    display: inline
+    width: 200px
+  input[type="submit"]
+    width: auto
+    padding: 3px 6px
+    font-size: 12px
+  .input
+    display: inline-block
+  label
+    font-size: 12px
