--- a/app/views/admin/preferences/new.html.erb
+++ b/app/views/admin/preferences/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Admin::Preferences#new</h1>
-<p>Find me in app/views/admin/preferences/new.html.erb</p>
+<% title "New preference" %>
+
+<%= simple_form_for @preference, url: admin_preferences_url do |f| %>
+	<%= f.input :name %>
+	<%= f.input :value %>
+	
+	<%= f.submit 'Save' %>
+<% end %>
