--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -36,6 +36,6 @@
 	</div>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.js"></script>
 	<script>window.jQuery || document.write("<script src='/javascripts/jquery.js'>\x3C/script>")</script>
-	<%= javascript_include_tag 'session' %>
+	<%= javascript_include_tag 'admin' %>
 </body>
 </html>
