Removed extra views; Pref stuff

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -35,7 +35,7 @@
 		
 	</div>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.js"></script>
-	<script>window.jQuery || document.write("<script src='/javascripts/jquery.js'>\x3C/script>")</script>
-	<%= javascript_include_tag 'admin' %>
+	<script>window.jQuery || document.write("<%= javascript_include_tag 'jquery' %>")</script>
+	<%= javascript_include_tag 'rails', 'admin' %>
 </body>
 </html>
