--- a/themes/default/stylesheets/screen.css
+++ b/themes/default/stylesheets/screen.css
@@ -1,5 +1,5 @@
 @import url(reset.css);
-@import url(1140.css);
+@import url(grid.css);
 
 body { background: #eaeaea url(../images/bg.gif); color: #333333; font-size: 14px; }
 a { text-decoration: none; text-shadow: white 0 1px 0; }
@@ -12,7 +12,7 @@ h2 { font-size: 18px; }
 h3 { font-size: 36px; }
 h4 { font-size: 16px; }
 p { margin-bottom: 16px; line-height: 1.8; }
-p + p:last-child { margin-bottom: 0; }
+p + p:last-child, p:only-child { margin-bottom: 0; }
 ul { list-style: none; }
 footer { margin-bottom: 64px; text-shadow: white 0 1px 0; color: #888888; }
 
