--- a/themes/default/views/layouts/blog.html.erb
+++ b/themes/default/views/layouts/blog.html.erb
@@ -21,7 +21,7 @@
 		</div>
 		
 		<footer class="row">
-			&copy; 2011 Author. All Rights Reserved.
+			&copy; 2011 <%= Preference.get 'author_name' %>. This is a <a href="http://clovrr.com">Clovrr</a> blog.
 		</footer>		
 	</div>
 </body>
