--- a/themes/default/views/posts/_post.html.erb
+++ b/themes/default/views/posts/_post.html.erb
@@ -1,42 +1,12 @@
 <li>
 	<% if post.link? and post.body? -%>
-	
-	<div class="fourcol info">
-		<h4><%= link_to post.created_at.strftime('%B %d, %Y. %I:%M%P.'), post_url(post.url) %></h4>
-		<h3><%= link_to raw("#{post.title} &rarr;"), post.link %></h3>
-	</div>
-	<div class="eightcol body last">
-		<div class="inside">
-			<%= raw post.parsed_body %>
-		</div>
-	</div>
-	
+		<%= render partial: 'posts/types/link_and_body', locals: { post: post } %>
 	<% elsif post.link? -%>
-	
-	<div class="link">
-		<h4><%= link_to post.created_at.strftime('%B %d, %Y. %I:%M%P.'), post_url(post.url) %></h4>
-		<h3><%= link_to raw("#{post.title} &rarr;"), post.link %></h3>
-	</div>
-	
+		<%= render partial: 'posts/types/link', locals: { post: post } %>
 	<% elsif post.body? -%>
-	
-	<div class="fourcol info">
-		<h4><%= link_to post.created_at.strftime('%B %d, %Y. %I:%M%P.'), post_url(post.url) %></h4>
-		<h3><%= post.title %></h3>
-	</div>
-	<div class="eightcol body last">
-		<div class="inside">
-			<%= raw post.parsed_body %>
-		</div>
-	</div>
-	
+		<%= render partial: 'posts/types/title_and_body', locals: { post: post } %>
 	<% else -%>
-	
-	<div class="title_only">
-		<h4><%= link_to post.created_at.strftime('%B %d, %Y. %I:%M%P.'), post_url(post.url) %></h4>
-		<h3><%= post.title %></h3>
-	</div>
-	
+		<%= render partial: 'posts/types/title', locals: { post: post } %>
 	<% end %>
 	<div class="clear"></div>
 </li>
