--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,6 +1,13 @@
 <% title 'Posts' %>
 
 <table cellspacing="0" id="posts">
+	<thead>
+		<tr>
+			<td>Title</td>
+			<td>Edit</td>
+			<td>Destroy</td>
+		</tr>
+	</thead>
 	<tbody>
 		<%= render @posts %>
 	</tbody>
