--- a/app/views/admin/preferences/index.html.erb
+++ b/app/views/admin/preferences/index.html.erb
@@ -1,5 +1,7 @@
 <% title 'Preferences' %>
 
+<%= link_to 'New preference', new_admin_preference_url, class: 'add', id: 'preference_add' %>
+
 <table cellspacing="0" id="preferences">
 	<thead>
 		<tr>
