--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Admin::Users#index</h1>
-<p>Find me in app/views/admin/users/index.html.erb</p>
+<% title 'Users' %>
+
+<%= link_to 'New user', new_admin_user_url, class: 'add' %>
+
+<table cellspacing="0" id="posts">
+	<thead>
+		<tr>
+			<td>Username</td>
+			<td>Edit</td>
+			<td>Destroy</td>
+		</tr>
+	</thead>
+	<tbody>
+		<%= render @users %>
+	</tbody>
+</table>
+
+<%= paginate @users %>
