--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -17,13 +17,17 @@ label { display: block; color: #444444; font-weight: bold; font-size: 16px; }
 input[type="text"], input[type="password"], input[type="email"], textarea { font-size: 24px; padding: 8px; width: 580px; border: #aaaaaa 1px solid; }
 input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus, textarea:focus { outline: 0; border-color: #888888; -moz-box-shadow: 0 0 8px rgba(227, 227, 227, 0.5); -webkit-box-shadow: 0 0 8px rgba(227, 227, 227, 0.5); -o-box-shadow: 0 0 8px rgba(227, 227, 227, 0.5); box-shadow: 0 0 8px rgba(227, 227, 227, 0.5); }
 
-input[type="submit"], button { padding: 12px 32px; background: #81c914 -webkit-gradient(linear, 0% 0%, 0% 100%, from(#81c914), to(#5c8f0e)); border: #639b0f 1px solid; color: white; text-shadow: rgba(0, 0, 0, 0.5) 0 -1px 1px; font-weight: bold; font-size: 16px; -moz-border-radius: 4px; -webkit-border-radius: 4px; -o-border-radius: 4px; -ms-border-radius: 4px; -khtml-border-radius: 4px; border-radius: 4px; }
-input[type="submit"]:hover, button:hover { background: #87d215 -webkit-gradient(linear, 0% 0%, 0% 100%, from(#87d215), to(#62980f)); }
-input[type="submit"]:active, button:active { background: #5c8f0e -webkit-gradient(linear, 0% 0%, 0% 100%, from(#5c8f0e), to(#81c914)); color: #d6f6a6; }
+input[type="submit"] { padding: 12px 32px; background: #81c914; background: #81c914 -webkit-gradient(linear, 0% 0%, 0% 100%, from(#81c914), to(#5c8f0e)); border: #639b0f 1px solid; color: white; text-shadow: rgba(0, 0, 0, 0.5) 0 -1px 1px; font-weight: bold; font-size: 16px; -moz-border-radius: 4px; -webkit-border-radius: 4px; -o-border-radius: 4px; -ms-border-radius: 4px; -khtml-border-radius: 4px; border-radius: 4px; }
+input[type="submit"]:hover { background: #87d215; background: #87d215 -webkit-gradient(linear, 0% 0%, 0% 100%, from(#87d215), to(#62980f)); }
+input[type="submit"]:active { background: #5c8f0e; background: #5c8f0e -webkit-gradient(linear, 0% 0%, 0% 100%, from(#5c8f0e), to(#81c914)); color: #d6f6a6; }
+
+.add { margin-bottom: 16px; display: inline-block; font-size: 24px; }
 
 textarea { font-size: 14px; height: 280px; }
 
 .input { margin-bottom: 16px; }
+
+form abbr { display: none; }
 
 footer { margin-top: 16px; }
 
@@ -43,3 +47,7 @@ tr { border-bottom: #cccccc 1px solid; }
 .ajax_form input[type="submit"] { width: auto; padding: 3px 6px; font-size: 12px; }
 .ajax_form .input { display: inline-block; }
 .ajax_form label { font-size: 12px; }
+
+#api_key { margin-bottom: 16px; padding: 16px; background: #eeeeee; }
+
+nav { font-size: 24px; font-weight: bold; }
