Backend stuff; DB seeds; No JS in the backend (for now)

--- a/app/stylesheets/admin.sass
+++ b/app/stylesheets/admin.sass
@@ -76,6 +76,14 @@ textarea
 .input
   margin-bottom: 16px
   
+.boolean
+  input
+    margin-top: -2px
+    display: inline-block
+  label
+    display: inline-block
+    margin-left: 8px
+  
 form
   abbr
     display: none
@@ -123,4 +131,16 @@ tr
   
 nav
   font-size: 24px
+  
+.flash
+  padding: 16px
   font-weight: bold
+  color: #fff
+  margin-bottom: 16px
+  text-shadow: rgba(0, 0, 0, .5) 0 1px 0
+  
+.notice
+  background: #4EB933
+  
+.error
+  background: #B33B3B
