--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,5 +1,7 @@
 <% title 'Posts' %>
 
+<%= link_to 'New post', new_admin_post_url, class: 'add' %>
+
 <table cellspacing="0" id="posts">
 	<thead>
 		<tr>
