Basic installer; Styling stuff; Refactor auth stuff slightly

--- a/app/stylesheets/users.sass
+++ b/app/stylesheets/users.sass
@@ -76,3 +76,16 @@ footer
   padding: 8px
   font-size: 15px
   margin-bottom: 16px
+  
+.flash
+  padding: 16px
+  font-weight: bold
+  color: #fff
+  margin-bottom: 16px
+  text-shadow: rgba(0, 0, 0, .5) 0 1px 0
+
+.notice
+  background: #4EB933
+
+.error
+  background: #B33B3B
