Users can now edit their own account (fixes #2)

--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -16,7 +16,8 @@
 		<%= flash_messages %>
 		
 		<header>
-			<h1><%= yield :title %></h1>
+			<h1><%= Preference.get 'site_name' %></h1>
+			<h2><%= yield :title %></h2>
 		</header>
 		
 		<div id="content">
