Re-added JS to admin layout (fixes #1)

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -40,6 +40,8 @@
 			<span id="powered_by">Powered by <a href="http://clovrr.com">Clovrr</a></span>
 		</footer>
 		
+		<%= javascript_include_tag 'jquery', 'rails' %>
+		
 	</div>
 </body>
 </html>
