Rearranged Users stuff (fixes #4); Added account bar to default theme (fixes #5)

--- a/app/stylesheets/users.sass
+++ b/app/stylesheets/users.sass
@@ -24,6 +24,14 @@ h2
   margin-left: 8px
   font-weight: 400
   
+h3
+  font-size: 20px
+
+h4
+  font-size: 18px
+  color: #aaa
+  font-weight: normal
+  
 header
   margin-bottom: 16px
   
@@ -77,6 +85,23 @@ footer
   font-size: 15px
   margin-bottom: 16px
   
+#actions
+  font-size: 18px
+  list-style: none
+  margin: 16px 0
+  padding: 16px
+  background: #eee
+  
+#edit
+  float: left
+
+#destroy
+  float: right
+  a
+    color: #bbb
+    &:hover
+      color: #B33B3B
+  
 .flash
   padding: 16px
   font-weight: bold
@@ -89,3 +114,6 @@ footer
 
 .error
   background: #B33B3B
+  
+.clear
+  clear: both
