Getting the layout and stuff started

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -1,7 +1,13 @@
-/*
-  Welcome to Compass.
-  In this file you should write your main styles. (or centralize your imports)
-  Import this file using the following HTML or equivalent:
-  <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+@import reset.css
+@import grid.css
 
-@import compass/reset
+#main
+  margin: 64px auto
+  
+h1
+  font-size: 48px
+
+h2
+  font-size: 36px
+  color: #aaa
+  font-weight: normal
