--- a/themes/default/stylesheets/screen.css
+++ b/themes/default/stylesheets/screen.css
@@ -6,8 +6,9 @@ a { text-decoration: none; }
 a:link, a:visited { color: #D84848; }
 a:active { color: #B33B3B; }
 a:hover { color: black; }
-h1 { font-size: 24px; }
-h2 { font-size: 18px; }
+h1, h2, h3, h4, h5, h6 { margin:16px 0; }
+h1 { font-size: 24px; margin: 0; }
+h2 { font-size: 18px; margin: 0; }
 h3 { font-size: 36px; }
 h4 { font-size: 16px; }
 p { margin-bottom: 16px; line-height: 1.8; }
@@ -21,9 +22,9 @@ footer { margin-bottom: 64px; color: #888888; }
 #posts li { margin-bottom: 96px; display: block; }
 #posts li + li:last-child { margin-bottom: 0; }
 
+.info h3, .info h4 { margin: 0; }
 .link h3, .title_only h3 { font-size: 64px; }
 .body { background: white; text-align: justify-left; }
-.inside { padding: 16px; }
 .clear { clear: both; }
 
 .pagination { font-size: 36px; font-weight: bold; }
