Added Instapaper parsing help to the default theme

--- a/themes/default/views/posts/types/_link_and_body.html.erb
+++ b/themes/default/views/posts/types/_link_and_body.html.erb
@@ -3,7 +3,7 @@
 	<h3><%= link_to raw("#{post.title} &rarr;"), post.link %></h3>
 </div>
 <div class="eightcol body last">
-	<div class="inside">
+	<div class="inside instapaper_body">
 		<%= raw post.parsed_body %>
 	</div>
 </div>
