Working on that post preview

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -40,7 +40,7 @@
 			<span id="powered_by">Powered by <a href="http://clovrr.com">Clovrr</a></span>
 		</footer>
 		
-		<%= javascript_include_tag 'jquery', 'rails' %>
+		<%= javascript_include_tag 'jquery', 'rails', 'admin' %>
 		
 	</div>
 </body>
